--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wes Vetter <wesvetter@gmail.com> (https://wesvetter.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "husky": "6.0.0"
+  }
 }
