--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Test repo to illustrate Husky-related question",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "author": "Wes Vetter <wesvetter@gmail.com> (https://wesvetter.com/)",
   "license": "MIT",
   "devDependencies": {
-    "husky": "6.0.0"
+    "husky": "^6.0.0"
   }
 }
